--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -8,6 +8,9 @@
 
 \usetheme{digital-minimal}
 
+\usepackage{color-palettes}
+\usepackage[cpalette]{sopra-listings}
+
 \title{Example Presentation}
 \subtitle{This is madness}
 
@@ -49,9 +52,16 @@
 \end{frame}
 
 \section{Excalibur}
-\begin{frame}{Eigenschaften für die Analyse}
+\begin{frame}[fragile]{Eigenschaften für die Analyse}
     \begin{itemize}
         \item Die Begriffe sind zu unterscheiden!
+\begin{java}
+class Example {
+    public static void main(String[] args) {
+        System.out.println("Hello World");
+    }
+}
+\end{java}
         \item So können bei einem Algorithmus verschiedene Wege zum selben Ziel führen.
         \item (Sinnfreies) Beispiel: Der Algorithmus kann jedes Element eines Arrays quadrieren. Die Reihenfolge wählt er zufällig aus!
         \item Dieser Algorithmus \emph{determiniert}, ist aber \emph{nicht-deterministisch}!
