--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -6,7 +6,7 @@
 \usepackage[english,main=ngerman]{babel}
 \usepackage{lipsum}
 
-\usetheme[darkmode]{digital-minimal}
+\usetheme{digital-minimal} % [darkmode]
 
 \title{Example Presentation}
 \subtitle{This is madness}
