minimal dm color

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -35,7 +35,7 @@
 
 \ifbtdm@darkmode@
 \colorlet{btdm@text}{black!1!white}
-\definecolor{btdm@primary}{RGB}{202,43,67} % todo
+\colorlet{btdm@primary}{green!80!yellow!80!orange} % todo
 \colorlet{btdm@block}{darkgray!60!black!99!btdm@primary}
 \colorlet{btdm@background}{darkgray!99!white!99!btdm@primary}
 \colorlet{btdm@border@up}{darkgray!90!black!99!btdm@primary}
