--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -1,3 +1,4 @@
+\errorcontextlines9999
 \documentclass[aspectratio=169,usepdftitle=true]{beamer}
 
 \usepackage[T1]{fontenc}
@@ -6,10 +7,10 @@
 \usepackage[english,main=ngerman]{babel}
 \usepackage{lipsum}
 
-\usetheme[lightmode-fill]{digital-minimal}
+\usetheme[darkmode]{digital-minimal}
 
 \title{Example Presentation}
-\subtitle{This is madness}
+\subtitle{The bandits are coming}
 
 \date[14.08.2020]{14. August 2020}
 
@@ -17,12 +18,12 @@
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
 \addbibresource{example.bib}
+
+\setfootmarker{Tutorium 1}
+
 \begin{document}
 
-\begin{frame}[c]
-    \titlepage
-    \revealfooton{2}
-\end{frame}
+\titleframe
 
 \section{Theoretische Grundlagen}
 \subsection{Der Algorithmusbegriff}
