--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -10,11 +10,13 @@
 \usetheme[darkmode]{digital-minimal}
 
 \title{Example Presentation}
+\setauthormailsubject{Tutorium\%201}
 \subtitle{The bandits are coming}
 
 \date[14.08.2020]{14. August 2020}
 
 \author[F.~Sihler]{Florian Sihler}
+\email{florian.sihler@uni-ulm.de}
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
 \addbibresource{example.bib}
