--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -7,7 +7,7 @@
 \usepackage[english,main=ngerman]{babel}
 \usepackage{lipsum}
 
-\usetheme[darkmode]{digital-minimal}
+\usetheme[lightmode-fill]{digital-minimal}
 
 \title{Example Presentation}
 \setauthormailsubject{Tutorium\%201}
@@ -21,7 +21,7 @@
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
 \addbibresource{example.bib}
 
-\setfootmarker{Tutorium 1}
+\setfootmarker{EidI~\faAngleRight\ Tutorium 1}
 
 \begin{document}
 
