--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -1,5 +1,5 @@
 \errorcontextlines9999
-\documentclass[aspectratio=169,usepdftitle=true]{beamer}
+\documentclass[aspectratio=169,usepdftitle=true,handout]{beamer}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -10,6 +10,7 @@
 \usetheme[lightmode-fill]{digital-minimal}
 
 \title{Example Presentation}
+\titlenumber{1}
 \setauthormailsubject{Tutorium\%201}
 \subtitle{The bandits are coming}
 
